<resources>
    <string name="app_name">BugsGame</string>

    <string name="registration_title">Регистрация игрока</string>
    <string name="full_name">ФИО</string>
    <string name="gender">Пол</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="course">Курс</string>
    <string name="difficulty">Уровень сложности: %1$d</string>
    <string name="difficulty_initial">Уровень сложности: 1</string>
    <string name="birth_date">Дата рождения</string>
    <string name="birth_year">Год рождения</string>
    <string name="register">Зарегистрировать</string>
    <string name="zodiac_sign">Знак зодиака</string>
    <string name="player_result">Данные игрока:\n\nФИО: %1$s\nПол: %2$s\nКурс: %3$s\nУровень сложности: %4$d\nДата рождения: %5$s\nЗнак зодиака: %6$s</string>

    <string name="game_speed">Скорость игры</string>
    <string name="max_num_beetles">Максимальное количество тараканов</string>
    <string name="bonus_interval">Интервал появления бонусов</string>
    <string name="round_duration">Длительность раунда</string>
</resources>